--- a/app/src/main/res/xml/layout_card_template_scene.xml
+++ b/app/src/main/res/xml/layout_card_template_scene.xml
@@ -1,17 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<MotionScene 
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<MotionScene xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:motion="http://schemas.android.com/apk/res-auto">
 
-    <Transition
-        motion:constraintSetEnd="@+id/end"
-        motion:constraintSetStart="@id/start"
-        motion:duration="1000">
-       <KeyFrameSet>
-       </KeyFrameSet>
-    </Transition>
-
-    <ConstraintSet android:id="@+id/start">
+    <ConstraintSet android:id="@+id/collapsed">
         <Constraint android:id="@+id/profilePic">
             <Layout
                 android:layout_width="100dp"
@@ -23,48 +14,47 @@
             <Layout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                motion:layout_constraintStart_toEndOf="@id/profilePic"
-                motion:layout_constraintTop_toTopOf="@id/profilePic"
+                android:layout_marginStart="16dp"
                 motion:layout_constraintBottom_toBottomOf="@id/profilePic"
-                android:layout_marginStart="16dp"/>
+                motion:layout_constraintStart_toEndOf="@id/profilePic"
+                motion:layout_constraintTop_toTopOf="@id/profilePic" />
             <CustomAttribute
                 motion:attributeName="textColor"
-                motion:customColorValue="#000000"/>
+                motion:customColorValue="#000000" />
         </Constraint>
-        <Constraint
-            android:id="@+id/aboutLabel">
+        <Constraint android:id="@+id/aboutLabel">
             <PropertySet
                 android:visibility="gone"
-                motion:visibilityMode="normal"/>
+                motion:visibilityMode="normal" />
         </Constraint>
-        <Constraint
-            android:id="@+id/about">
+        <Constraint android:id="@+id/about">
             <PropertySet
                 android:visibility="gone"
-                motion:visibilityMode="normal"/>
+                motion:visibilityMode="normal" />
         </Constraint>
     </ConstraintSet>
 
-    <ConstraintSet android:id="@+id/end"
+    <ConstraintSet
+        android:id="@+id/expanded"
         motion:deriveConstraintsFrom="@id/start">
         <Constraint android:id="@id/profilePic">
             <Layout
                 android:layout_width="0dp"
                 android:layout_height="300dp"
+                motion:layout_constraintEnd_toEndOf="parent"
                 motion:layout_constraintStart_toStartOf="parent"
-                motion:layout_constraintTop_toTopOf="parent"
-                motion:layout_constraintEnd_toEndOf="parent"/>
+                motion:layout_constraintTop_toTopOf="parent" />
         </Constraint>
         <Constraint android:id="@+id/name">
             <Layout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                motion:layout_constraintStart_toStartOf="parent"
+                android:layout_marginBottom="16dp"
                 motion:layout_constraintBottom_toBottomOf="@id/profilePic"
-                android:layout_marginBottom="16dp"/>
+                motion:layout_constraintStart_toStartOf="parent" />
             <CustomAttribute
                 motion:attributeName="textColor"
-                motion:customColorValue="#FFFFFF"/>
+                motion:customColorValue="#FFFFFF" />
         </Constraint>
     </ConstraintSet>
 </MotionScene>
