--- a/app/src/main/res/xml/layout_order_item_scene.xml
+++ b/app/src/main/res/xml/layout_order_item_scene.xml
@@ -2,59 +2,70 @@
 <MotionScene xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:motion="http://schemas.android.com/apk/res-auto">
 
-    <ConstraintSet android:id="@+id/collapsed">
-        <Constraint android:id="@+id/profilePic">
+    <ConstraintSet android:id="@+id/expanded">
+        <Constraint android:id="@+id/tvProductImage">
             <Layout
-                android:layout_width="100dp"
-                android:layout_height="100dp"
+                android:layout_width="150dp"
+                android:layout_height="150dp"
                 motion:layout_constraintStart_toStartOf="parent"
                 motion:layout_constraintTop_toTopOf="parent" />
         </Constraint>
-        <Constraint android:id="@+id/name">
+        <Constraint android:id="@+id/tvProductName">
             <Layout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
-                motion:layout_constraintBottom_toBottomOf="@id/profilePic"
-                motion:layout_constraintStart_toEndOf="@id/profilePic"
-                motion:layout_constraintTop_toTopOf="@id/profilePic" />
-            <CustomAttribute
-                motion:attributeName="textColor"
-                motion:customColorValue="#000000" />
+                motion:layout_constraintBottom_toBottomOf="@id/tvProductImage"
+                motion:layout_constraintStart_toEndOf="@id/tvProductImage"
+                motion:layout_constraintTop_toTopOf="@id/tvProductImage"
+                motion:layout_constraintEnd_toEndOf="parent"/>
         </Constraint>
-        <Constraint android:id="@+id/aboutLabel">
-            <PropertySet
-                android:visibility="gone"
-                motion:visibilityMode="normal" />
+        <Constraint android:id="@+id/tvProductPrice">
+            <Layout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                motion:layout_constraintTop_toBottomOf="@id/tvProductName"
+                motion:layout_constraintStart_toEndOf="@id/tvProductImage" />
         </Constraint>
-        <Constraint android:id="@+id/about">
-            <PropertySet
-                android:visibility="gone"
-                motion:visibilityMode="normal" />
+        <Constraint android:id="@+id/tvInStackLabel">
+            <Layout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                motion:layout_constraintTop_toBottomOf="@id/tvProductPrice"
+                motion:layout_constraintStart_toEndOf="@id/tvProductImage" />
         </Constraint>
     </ConstraintSet>
 
     <ConstraintSet
-        android:id="@+id/expanded"
-        motion:deriveConstraintsFrom="@id/start">
-        <Constraint android:id="@id/profilePic">
-            <Layout
-                android:layout_width="0dp"
-                android:layout_height="300dp"
-                motion:layout_constraintEnd_toEndOf="parent"
-                motion:layout_constraintStart_toStartOf="parent"
-                motion:layout_constraintTop_toTopOf="parent" />
+        android:id="@+id/collapsed">
+        <Constraint android:id="@id/tvProductImage">
+            <PropertySet
+                android:visibility="gone"/>
         </Constraint>
-        <Constraint android:id="@+id/name">
+        <Constraint android:id="@+id/tvProductName">
             <Layout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="16dp"
-                motion:layout_constraintBottom_toBottomOf="@id/profilePic"
-                motion:layout_constraintStart_toStartOf="parent" />
-            <CustomAttribute
-                motion:attributeName="textColor"
-                motion:customColorValue="#FFFFFF" />
+                motion:layout_constraintBottom_toBottomOf="parent"
+                motion:layout_constraintTop_toTopOf="parent"
+                motion:layout_constraintStart_toStartOf="parent"
+                motion:layout_constraintEnd_toStartOf="@+id/tvProductPrice" />
+        </Constraint>
+        <Constraint android:id="@+id/tvProductPrice">
+            <Layout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                motion:layout_constraintTop_toTopOf="parent"
+                motion:layout_constraintBottom_toBottomOf="parent"
+                motion:layout_constraintEnd_toEndOf="parent" />
+        </Constraint>
+        <Constraint android:id="@+id/tvInStackLabel">
+            <PropertySet
+                android:visibility="gone"/>
         </Constraint>
     </ConstraintSet>
 </MotionScene>
