--- a/app/src/main/res/layout/layout_order_item.xml
+++ b/app/src/main/res/layout/layout_order_item.xml
@@ -56,4 +56,8 @@
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:textColor="@android:color/black" />
 
+    <Button
+        android:id="@+id/btnNext"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 </com.selvakumarsm.elasticmodule2.ElasticView>
