--- a/app/src/main/res/xml/layout_attractions_scene.xml
+++ b/app/src/main/res/xml/layout_attractions_scene.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <MotionScene xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:motion="http://schemas.android.com/apk/res-auto">
-
+    <Transition
+        android:id="@+id/mainTransition"
+        motion:constraintSetStart="@id/collapsed"
+        motion:constraintSetEnd="@id/expanded">
+    </Transition>
     <ConstraintSet android:id="@+id/expanded">
         <Constraint android:id="@+id/ivPhoto">
             <Layout
