--- a/app/src/main/res/xml/layout_attractions_scene.xml
+++ b/app/src/main/res/xml/layout_attractions_scene.xml
@@ -16,22 +16,6 @@
                 motion:layout_constraintStart_toStartOf="parent"
                 motion:layout_constraintTop_toTopOf="parent" />
         </Constraint>
-        <Constraint android:id="@+id/tvTitle">
-            <Layout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginEnd="10dp"
-                android:layout_marginBottom="10dp"
-                motion:layout_constraintBottom_toBottomOf="@id/ivPhoto"
-                motion:layout_constraintEnd_toEndOf="parent"
-                motion:layout_constraintHorizontal_bias="0.497"
-                motion:layout_constraintStart_toStartOf="parent" />
-            <CustomAttribute
-                motion:attributeName="textColor"
-                motion:customColorValue="@android:color/white" />
-        </Constraint>
         <Constraint
             android:id="@+id/tvDescription"
             android:layout_width="match_parent"
@@ -41,15 +25,17 @@
             <Layout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginEnd="10dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="20dp"
                 android:layout_marginBottom="10dp"
                 motion:layout_constraintBottom_toBottomOf="parent"
                 motion:layout_constraintEnd_toEndOf="parent"
                 motion:layout_constraintStart_toStartOf="parent"
                 motion:layout_constraintTop_toBottomOf="@id/ivPhoto" />
             <PropertySet android:visibility="visible" />
+        </Constraint>
+        <Constraint android:id="@+id/card">
+            <PropertySet android:visibility="gone"/>
         </Constraint>
     </ConstraintSet>
 
@@ -58,29 +44,30 @@
             <Layout
                 android:layout_width="0dp"
                 android:layout_height="200dp"
-                motion:layout_constraintEnd_toEndOf="parent"
-                motion:layout_constraintStart_toStartOf="parent"
-                motion:layout_constraintTop_toTopOf="parent" />
-        </Constraint>
-        <Constraint android:id="@+id/tvTitle">
-            <Layout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginEnd="10dp"
-                android:layout_marginBottom="10dp"
-                android:orientation="vertical"
-                motion:layout_constraintEnd_toEndOf="parent"
-                motion:layout_constraintHorizontal_bias="0.497"
-                motion:layout_constraintStart_toStartOf="parent"
-                motion:layout_constraintTop_toBottomOf="@id/ivPhoto" />
-            <CustomAttribute
-                motion:attributeName="textColor"
-                motion:customColorValue="@android:color/black" />
+                motion:layout_constraintEnd_toEndOf="@id/card"
+                motion:layout_constraintStart_toStartOf="@id/card"
+                motion:layout_constraintTop_toTopOf="@id/card" />
+            <Transform
+                android:elevation="7dp"/>
         </Constraint>
         <Constraint android:id="@+id/tvDescription">
             <PropertySet android:visibility="gone" />
+        </Constraint>
+        <Constraint android:id="@+id/card">
+            <Layout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginTop="10dp"
+                motion:layout_constraintStart_toStartOf="parent"
+                motion:layout_constraintEnd_toStartOf="parent"
+                motion:layout_constraintEnd_toEndOf="parent"/>
+
+            <PropertySet android:visibility="visible"/>
+
+            <Transform
+                android:elevation="5dp"/>
         </Constraint>
     </ConstraintSet>
 </MotionScene>
