--- a/app/src/main/res/layout/layout_attraction_item.xml
+++ b/app/src/main/res/layout/layout_attraction_item.xml
@@ -4,9 +4,15 @@
     android:id="@+id/elasticRoot"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimary"
     android:clipChildren="true"
     app:layoutDescription="@xml/layout_attractions_scene">
+
+    <com.google.android.material.card.MaterialCardView
+        android:id="@+id/card"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/card_background"
+        />
 
     <ImageView
         android:id="@+id/ivPhoto"
@@ -19,8 +25,10 @@
         android:id="@+id/tvTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingStart="20dp"
+        android:paddingTop="20dp"
+        android:paddingBottom="20dp"
         android:text="Wood fuel"
-        android:textColor="@android:color/white"
         android:textSize="24sp"
         android:textStyle="bold" />
 
@@ -30,6 +38,7 @@
         android:layout_height="wrap_content"
         android:text="Firewood is any wooden material that is gathered and used for fuel. Generally, firewood is not highly processed and is in some sort of recognizable log or branch form, compared to other forms of wood fuel like pellets or chips. Firewood can be seasoned (dry) or unseasoned (fresh/wet)."
         android:textColor="@android:color/black"
+        android:lineHeight="30sp"
         android:textSize="20sp"
         android:textStyle="bold" />
 
