Completed collapse/expand of views for Explore screen

--- a/ElasticModule2/src/main/res/values/attrs.xml
+++ b/ElasticModule2/src/main/res/values/attrs.xml
@@ -3,5 +3,9 @@
     <declare-styleable name="ElasticView">
         <attr name="collapsedSceneId" format="reference"/>
         <attr name="expandedSceneId" format="reference"/>
+        <attr name="initialState" format="enum">
+            <enum name="collapsed" value="0"/>
+            <enum name="expanded" value="1"/>
+        </attr>
     </declare-styleable>
 </resources>
