--- a/app/src/main/res/layout/layout_featured_item.xml
+++ b/app/src/main/res/layout/layout_featured_item.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorAccent"
     app:layoutDescription="@xml/layout_featured_item_scene"
     app:collapsedSceneId="@+id/start"
     app:expandedSceneId="@+id/end">
